# Cookiecutter-Basic-Python-Template

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yaml
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
